src/objects/ContractLineItemSchedule__c.object
<CustomObject>
    <description>SFDC1-905 This is a custom object, which will be related to contract line item.</description>
    <fields>
        <fullName>ContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-380 This field holds the value of contract line item record to which contract line item schedule is related</description>
        <inlineHelpText>Contract Line Item</inlineHelpText>
        <label>Contract Line Item</label>
        <referenceTo>ContractLineItem__c</referenceTo>
        <relationshipLabel>Contract Line Item Schedules</relationshipLabel>
        <relationshipName>ContractLineItemSchedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-380 This is a lookup to Contract record, to which contract line item schedule is related</description>
        <inlineHelpText>Related Contract</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Line Item Schedules</relationshipLabel>
        <relationshipName>ContractLineItemSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <description>SFDC1-380 This field gets populated from opportunity product schedule - Discount Amount field when contract is created from wizard</description>
        <inlineHelpText>Discount Amount</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiscountPercent__c</fullName>
        <description>SFDC1-380 This field gets populated from opportunity product schedule - discount % field when contract is created from wizard</description>
        <inlineHelpText>Discount %</inlineHelpText>
        <label>Discount%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DiscountType__c</fullName>
        <description>SFDC1-380 This field gets populated from opportunity product schedule - discount type field when contract is created from wizard</description>
        <inlineHelpText>Discount Type</inlineHelpText>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>No Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalListPrice__c</fullName>
        <description>SFDC1-380 This field gets populated from opportunity product schedule - external list price field when contract is created from wizard</description>
        <inlineHelpText>External List Price</inlineHelpText>
        <label>External List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InstallmentYear__c</fullName>
        <description>SFDC1-380 This is a text field which copies InstallmentYear__c from Opportunity Product Schedule</description>
        <inlineHelpText>Installment Year</inlineHelpText>
        <label>Installment Year</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallmentYears__c</fullName>
        <description>SFDC1-380 This is a text field which copies InstallmentYears__c from Opportunity Product Schedule</description>
        <inlineHelpText>Installment Year</inlineHelpText>
        <label>Installment Year</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesPrice__c</fullName>
        <description>SFDC1-380 This field gets populated from opportunity product schedule - sales price field when contract is created from wizard</description>
        <inlineHelpText>Sales Price</inlineHelpText>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contract Line Item Schedule</label>
    <nameField>
        <displayFormat>CLS-{0000000}</displayFormat>
        <label>Contract Line Item Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Item Schedules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>